--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>7901 4TH ST N STE 300, ST PETERSBURG, FL 33702 </small>
+                    <small>Unit 16A, 16B / 17A Ground Floor, Tower B3, Spaze Itech Park, Sector 49, Gurugram, Haryana
+                        122018, India </small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -90,15 +91,12 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link active">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="medical-treatment.html" class="nav-item nav-link">Medical Treatment Cost</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="feature.html" class="dropdown-item">Feature</a>
-                        <a href="team.html" class="dropdown-item">Our Doctor</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="cardiac-surgery.html" class="dropdown-item">Cardiac Surgery</a>
+
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -192,34 +190,90 @@
 
                     <h2>Why Choose Adam Vacations Medical?</h2>
                     <strong>Top-Tier Hospitals</strong>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>We work exclusively with India’s most
+                    <p>We work exclusively with India’s most
                         reputed multi-specialty hospitals such as Fortis, Apollo, Medanta, Max
                         Healthcare, and more—ensuring the highest standards of treatment.</p>
                     <strong>Highly Qualified Doctors</strong>
 
-                    <p><i class="far fa-check-circle text-primary me-3"></i>Our partner hospitals house world-renowned
+                    <p>Our partner hospitals house world-renowned
                         surgeons and specialists in cardiology, oncology, orthopedics, fertility, cosmetic surgery,
                         neurology, and more.
                     </p>
                     <strong>Global Patient Services</strong>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>From the USA to Africa to Europe, we support
+                    <p>From the USA to Africa to Europe, we support
                         international patients with multilingual staff, video consultations, medical record evaluations,
                         second opinions, and complete logistical support.
                     </p>
                     <strong>End-to-End Travel Support</strong>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>From visa letters to airport pickups, hotel
+                    <p>From visa letters to airport pickups, hotel
                         stays, and translator services, we manage it all so that patients and their families can focus
                         entirely on recovery.
 
                     </p>
                     <strong>Affordable Healthcare</strong>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>India offers 60–80% cost savings
+                    <p>India offers 60–80% cost savings
                         compared to countries like the USA, without compromising on quality. We ensure transparent
                         pricing and no hidden fees.
 
 
                     </p>
                     <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
+                    <h2>Our Services at a Glance</h2>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Medical Consultations & Second Opinions
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Surgical & Non-Surgical Treatment Planning
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Visa Invitation Letters
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Flight Booking & Airport Transfers
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Accommodation Near Hospitals
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Post-treatment Recovery Packages
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Wellness & Rejuvenation Add-ons
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Interpreter & Attendant Assistance
+                    </p>
+                    <h2>Specialties We Handle</h2>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Cardiac Surgery
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Orthopedic Surgery
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>IVF & Fertility
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Cosmetic & Plastic Surgery
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Spine & Neuro Surgeries
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i> Liver & Kidney Transplants
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Bariatric (Weight Loss) Surgery
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Cancer Treatment
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Dental Implants
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Eye Surgeries
+
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Stem Cell Therapy
+
+
+                    </p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i> Hair Transplants
+
+
+                    </p>
                 </div>
             </div>
         </div>
@@ -232,10 +286,12 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <p class="d-inline-block border rounded-pill text-light py-1 px-4">Features</p>
-                        <h1 class="text-white mb-4">Why Choose Us</h1>
-                        <p class="text-white mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                            Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
-                            justo erat amet</p>
+                        <h1 class="text-white mb-4">Trusted by Patients from Around the World</h1>
+                        <p class="text-white mb-4 pb-2">We’ve proudly served hundreds of international patients from
+                            the USA, Canada, UK, Nigeria, UAE, Oman, Bangladesh, and Kenya—many of whom share their
+                            **success stories** on our platform. Their journeys inspire us to keep raising the bar for
+                            compassionate and competent medical care.
+                        </p>
                         <div class="row g-4">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
@@ -409,15 +465,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="privacy-policy.html">Privacy Policy</a>
+                    <a class="btn btn-link" href="termsandconditions.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="refund-policy.html">Refund & Cancellation Policy</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Caring for Your Health, Every Day</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button"
@@ -429,12 +485,8 @@
         <div class="container">
             <div class="copyright">
                 <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                    <div class="col-md-12 text-center text-md-start mb-3 mb-md-0">
+                        &copy; medical@adamvacations.com, All Right Reserved.
                     </div>
                 </div>
             </div>
