--- a/medical-treatment.html
+++ b/medical-treatment.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klinik - Clinic Website Template</title>
+    <title>Medical Treatment Cost Comparison: India vs USA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -94,13 +94,12 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="medical-treatment.html" class="nav-item nav-link">Medical Treatment Cost</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="cardiac-surgery.html" class="dropdown-item">Cardiac Surgery</a>
-
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
             <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i
                     class="fa fa-arrow-right ms-3"></i></a>
@@ -112,92 +111,131 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Feature</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Feature</li>
-                </ol>
-            </nav>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Medical Treatment Cost Comparison: India vs USA
+            </h1>
+
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- Feature Start -->
-    <div class="container-fluid bg-primary overflow-hidden px-lg-0" style="margin: 6rem 0;">
-        <div class="container feature px-lg-0">
-            <div class="row g-0 mx-lg-0">
-                <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="p-lg-5 ps-lg-0">
-                        <p class="d-inline-block border rounded-pill text-light py-1 px-4">Features</p>
-                        <h1 class="text-white mb-4">Why Choose Us</h1>
-                        <p class="text-white mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                            Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
-                            justo erat amet</p>
-                        <div class="row g-4">
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                                        style="width: 55px; height: 55px;">
-                                        <i class="fa fa-user-md text-primary"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="text-white mb-2">Experience</p>
-                                        <h5 class="text-white mb-0">Doctors</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                                        style="width: 55px; height: 55px;">
-                                        <i class="fa fa-check text-primary"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="text-white mb-2">Quality</p>
-                                        <h5 class="text-white mb-0">Services</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                                        style="width: 55px; height: 55px;">
-                                        <i class="fa fa-comment-medical text-primary"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="text-white mb-2">Positive</p>
-                                        <h5 class="text-white mb-0">Consultation</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light"
-                                        style="width: 55px; height: 55px;">
-                                        <i class="fa fa-headphones text-primary"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="text-white mb-2">24 Hours</p>
-                                        <h5 class="text-white mb-0">Support</h5>
-                                    </div>
-                                </div>
-                            </div>
+    <!-- Contact Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="terms">
+                        <h1>Medical Treatment Cost Comparison</h1>
+                        <p>Explore the significant savings by choosing India for world-class medical treatments. Compare
+                            the average costs between India and the USA below:</p>
+
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Treatment Name</th>
+                                    <th>Avg. Cost (India)</th>
+                                    <th>Avg. Cost (USA)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Cardiac Surgery</td>
+                                    <td>$5,000 – $10,000</td>
+                                    <td>$70,000 – $200,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Knee/Hip Replacement</td>
+                                    <td>$6,000 – $9,000</td>
+                                    <td>$40,000 – $80,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Spine Surgery</td>
+                                    <td>$7,000 – $12,000</td>
+                                    <td>$80,000 – $150,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Cancer Treatment</td>
+                                    <td>$8,000 – $20,000</td>
+                                    <td>$100,000 – $300,000</td>
+                                </tr>
+                                <tr>
+                                    <td>IVF & Fertility</td>
+                                    <td>$3,000 – $6,000</td>
+                                    <td>$20,000 – $30,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Cosmetic Surgery</td>
+                                    <td>$3,000 – $8,000</td>
+                                    <td>$15,000 – $30,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Dental Implants</td>
+                                    <td>$800 – $2,500</td>
+                                    <td>$3,000 – $6,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Bariatric Surgery</td>
+                                    <td>$5,000 – $8,000</td>
+                                    <td>$20,000 – $50,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Liver/Kidney Transplant</td>
+                                    <td>$20,000 – $35,000</td>
+                                    <td>$300,000 – $800,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Neurosurgeries</td>
+                                    <td>$10,000 – $18,000</td>
+                                    <td>$100,000 – $250,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Eye Surgery (Lasik/Cataract)</td>
+                                    <td>$1,000 – $2,500</td>
+                                    <td>$4,000 – $8,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Stem Cell Therapy</td>
+                                    <td>$8,000 – $15,000</td>
+                                    <td>$50,000 – $100,000</td>
+                                </tr>
+                                <tr>
+                                    <td>Hair Transplant</td>
+                                    <td>$2,000 – $5,000</td>
+                                    <td>$10,000 – $20,000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <div class="features">
+                            <h2>Why Choose India for Your Treatment? – </h2>
+                            <ul>
+                                <li><strong>Affordable Costs:</strong> Save up to 80–90% compared to the USA without
+                                    compromising quality. </li>
+                                <li><strong>World-Class Hospitals:</strong> Modern facilities with internationally
+                                    accredited standards. - </li>
+                                <li><strong>Experienced Specialists:</strong> Highly trained doctors with global
+                                    experience.</li>
+                                <li><strong>Shorter Wait Times:</strong> Immediate appointments and faster treatment
+                                    schedules. -
+                                </li>
+                                <li>
+                                    <strong>Comprehensive Packages:</strong> Medical care combined with
+                                    travel, stay, and
+                                    post-treatment support.
+                                </li>
+                            </ul>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg"
-                            style="object-fit: cover;" alt="">
+
+                        <div class="cta">
+                            <p>Take the first step toward affordable, high-quality healthcare. Contact us today to plan
+                                your medical journey!</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Feature End -->
+    <!-- Contact End -->
 
 
     <!-- Footer Start -->
@@ -206,8 +244,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Unit 16A, 16B / 17A Ground Floor, Tower B3,
-                        Spaze Itech Park, Sector 49, Gurugram, Haryana 122018, India</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>7901 4TH ST N STE 300, ST PETERSBURG, FL
+                        33702</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+1 855 888 0114</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
                     <div class="d-flex pt-2">
