--- a/refund-policy.html
+++ b/refund-policy.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contact Us</title>
+    <title>Refund & Cancellation Policy</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -112,10 +112,8 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Contact Us</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Refund & Cancellation Policy</h1>
 
-            </nav>
         </div>
     </div>
     <!-- Page Header End -->
@@ -124,90 +122,220 @@
     <!-- Contact Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-4">
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
-                            style="width: 55px; height: 55px;">
-                            <i class="fa fa-map-marker-alt text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Address</p>
-                            <h5 class="mb-0">Unit 16A, 16B / 17A Ground Floor, Tower B3, Spaze Itech Park, Sector 49,
-                                Gurugram, Haryana 122018, India</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
-                            style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Call Us Now</p>
-                            <h5 class="mb-0">+1 855 888 0114</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
-                            style="width: 55px; height: 55px;">
-                            <i class="fa fa-envelope-open text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Mail Us Now</p>
-                            <h5 class="mb-0">medical@adamvacations.com</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="bg-light rounded p-5">
-                        <p class="d-inline-block border rounded-pill py-1 px-4">Contact Us</p>
-                        <h1 class="mb-4">Need Assistance? We’re here to help.</h1>
-                        <p class="mb-4">Trusted by Patients from Around the World</p>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                        <label for="name">Your Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                        <label for="email">Your Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                        <label for="subject">Subject</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message"
-                                            style="height: 100px"></textarea>
-                                        <label for="message">Message</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="h-100" style="min-height: 400px;">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3509.201111337185!2d77.04059372613159!3d28.413187894006487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d23e91e0f9f45%3A0xdcc6076502ec3458!2sAdam%20Vacations!5e0!3m2!1sen!2sin!4v1769684689969!5m2!1sen!2sin"
-                            width="100%" height="640px" style="border: 0" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="terms">
+                        <h1>Refund & Cancellation Policy</h1>
+                        <p>Last Updated: July 2025</p>
+                        <p>
+                            At Adam Vacations Pvt Ltd, we strive to make your medical travel journey smooth and
+                            stress-free. We understand that plans can change unexpectedly, and have designed a clear and
+                            fair refund and cancellation policy to protect your interests.
+                        </p>
+                        <h2> Booking Fee & Deposit
 
+
+                        </h2>
+
+
+                        <ul>
+                            <li>
+                                A non-refundable booking deposit is required to secure hospital appointments,
+                                specialists, and other services on your behalf.
+
+
+                            </li>
+                            <li>
+                                This deposit covers administrative, coordination, and facilitation expenses already
+                                incurred.
+
+                            </li>
+
+
+                        </ul>
+                        <h2>Cancellation by Patient
+                        </h2>
+                        <p>All cancellation requests must be submitted in writing via email to
+                            medicalhelp@adamvacations.com. Refunds are issued based on the timing of your request
+                            relative to the scheduled treatment date:
+                        </p>
+
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Time Before Scheduled Date</th>
+                                    <th scope="col">Refund Amount</th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>30+ days </td>
+                                    <td>70% of total amount paid (excluding booking fee)
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td>14–29 days </td>
+                                    <td>50% of total amount paid (excluding booking fee)
+
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td>7–13 days </td>
+                                    <td>25% of total amount paid (excluding booking fee)
+
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td>
+                                        < 7 days </td>
+                                    <td>No refund – funds non-refundable due to high costs
+
+
+                                    </td>
+
+                                </tr>
+
+
+                            </tbody>
+                        </table>
+                        <p>This structure is a fair estimate of actual costs incurred, including hospital coordination,
+                            travel arrangements, and administrative overhead.
+                        </p>
+
+
+                        <h2> Rescheduling</h2>
+                        <ul>
+                            <li>
+                                You may reschedule treatment once without any additional fees if requested at least 30
+                                days prior to the original scheduled date.
+                            </li>
+                            <li>
+                                Rescheduled appointments must occur within 4 months of the original date.
+                            </li>
+                            <li>
+                                Requests made within 14–30 days may incur a small administrative fee to cover changes.
+                            </li>
+                            <li>
+                                Last-minute reschedules (7 days before) may require payment of the new booking deposit.
+                            </li>
+
+                        </ul>
+                        <h2>Cancellation by Hospital or Surgeon
+                        </h2>
+                        <p>Should a hospital or surgeon cancel or postpone your treatment due to:
+
+                        </p>
+                        <ul>
+                            <li>
+                                Medical unsuitability,
+                            </li>
+                            <li>
+                                Unforeseen emergencies, or
+                            </li>
+                            <li>
+                                Hospital scheduling conflicts,
+                            </li>
+
+
+                        </ul>
+                        <h2>we will promptly:
+
+                        </h2>
+                        <p>We may share your personal data with:
+
+                        </p>
+                        <ul>
+                            <li>
+                                Inform you of alternative specialist options or dates,
+
+                            </li>
+                            <li>
+                                Refund any unused amount (post deducting the booking fee), and
+
+                            </li>
+                            <li>
+                                Ensure full transparency during the process.
+
+                            </li>
+
+
+                        </ul>
+                        <h2> Partial Treatment Cancellations</h2>
+                        <p>
+                            If any part of your planned treatment (e.g. diagnostic tests, follow-up visits) is canceled
+                            after your arrival, we will refund the cost of unused services, minus administrative fees
+                            and the initial booking deposit.
+
+
+                        </p>
+                        <h2>Travel & Accommodation Cancellations
+
+                        </h2>
+                        <ul>
+                            <li>
+                                Treatment package costs do not include airfare, visas, or accommodation.
+                            </li>
+                            <li>
+                                These services are booked on your behalf and are subject to third-party refund rules.
+                            </li>
+                            <li>
+                                We strongly suggest opting for travel insurance to cover such contingencies.
+                            </li>
+                        </ul>
+                        <h2>Refund Processing</h2>
+                        <ul>
+                            <li>
+                                Refund requests are processed within 30 days of receiving all required documentation.
+                            </li>
+                            <li>
+                                Approved refunds are issued via the same payment method originally used.
+                            </li>
+                            <li>
+                                Currency conversion fees may apply depending on international transactions.
+                            </li>
+
+                        </ul>
+
+                        <h2>Documentation Required</h2>
+                        <p>To process any refund, please provide:</p>
+                        <ul>
+                            <li>
+                                Written cancellation notice from you,
+                            </li>
+                            <li>
+                                Any relevant medical or logistical documentation, and
+                            </li>
+                            <li>
+                                Booking or payment reference numbers.
+                            </li>
+
+                        </ul>
+                        <h2>No-Show Policy
+                        </h2>
+                        <p>No refunds will be issued if you:
+                        </p>
+                        <ul>
+                            <li>
+                                Fail to arrive on the scheduled treatment date without prior written notice, or
+                            </li>
+                            <li>
+                                Do not complete the treatment itinerary.
+                            </li>
+                        </ul>
+                        <h2>Changes to Policy
+                        </h2>
+                        <p>Adam Vacations reserves the right to revise this policy at any time. New versions will be
+                            published to our website with updated effective dates.
+                        </p>
+                        <h2>Questions?
+                        </h2>
+                        <p>Please reach out to us at medical@adamvacations.com with your booking reference and full
+                            details. We're here to assist you every step of the way.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -222,8 +350,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Unit 16A, 16B / 17A Ground Floor, Tower B3,
-                        Spaze Itech Park, Sector 49, Gurugram, Haryana 122018, India</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>7901 4TH ST N STE 300, ST PETERSBURG, FL
+                        33702</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+1 855 888 0114</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
                     <div class="d-flex pt-2">
